--- a/keynote.tex
+++ b/keynote.tex
@@ -557,7 +557,7 @@ The advantages of applying the TCGA data for cancer biomarker identification inc
 
 \subsection{Two Patient Cohorts} 
 \large TCGA's \acrfull{hnscc}: n = 414, for \hl{modeling}\\ %528\\
-\indent{GSE65858 cohorty~\cite{Wichmann2015}: n = 270, for \hl{validation}}%288}
+\indent{GSE65858 cohort~\cite{Wichmann2015}: n = 270, for \hl{validation}}%288}
 
 \subsubsection{RNA Sequencing Data} 
 20,500 \hl{RNA-Seq} data of protein-coding genes\\%, dierived from cancer specimen of each participant
@@ -580,7 +580,7 @@ gender, age, clinical tumor size (T), clinical cervical lymph node metastases (N
 \resizebox{0.7\textwidth}{!}{%
 \begin{tabular}{|l|l|l|}
 \hline
-Features         & TCGA HNSCC   & GSE65858    \\ \hline
+Features         &  HNSCC (TCGA)   & HNSCC (GSE65858)   \\ \hline
 Participants    & 414   & 270\\ \hline
 Gender (females) & 26.9\% & 17.0\% \\ \hline
 Median age       & 61 y/o       & 58 y/o      \\ \hline
@@ -697,7 +697,7 @@ $$h(t) = h_0(t) \times exp(\beta_1 X_1 + \beta_2 X_2 + \beta_3 X_3 + ... + \beta
 
 \1 \large Bonferroni adjustment of the KM \textit{p}~values to control for type I error
 \1 Hazard ratios ($>=1.8$ or $<=0.6$) in both Cox models (univariate and multivariate)
-\1 GSE65858~\cite{Wichmann2015}
+\1 HNSCC (GSE65858)~\cite{Wichmann2015}
     \2 biomarker selection and validation
     \2 Kaplan--Meier (FDR-corrected \textit{p}~value) by gene expression cutoffs at their median values
     \2 Cox's survival analyses 
@@ -708,6 +708,55 @@ $$h(t) = h_0(t) \times exp(\beta_1 X_1 + \beta_2 X_2 + \beta_3 X_3 + ... + \beta
 
 
 \section{Results}
+
+\clearpage
+
+\thispagestyle{headings}
+\markright{Results \hfill The way to find CAMK2N1, CALML5, and FCGBP \hfill}
+
+\begin{figure}[ht]
+
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=.45\linewidth,capbesidesep=quad}}]{figure}[\FBwidth]
+% TCGA FDR Pvalue of CAMK2N1 (1.628308e-05), IL19 ( 6.543871e-06), FCGBP (4.827833e-05), CALML5 (0.0001970348)
+{\setlength{\unitlength}{.78cm}
+\begin{picture}(9, 10) %(1,0.55038404)%
+\centering
+  \put(0,0){\includegraphics[height=7.5cm]{Figure_4_CAMK2N1_CALML5_FCGBP.pdf}}%
+  \put(1.3, 7.25){\fontfamily{qcr}\selectfont
+  \tiny *\protect\textit{p} = \num{1.63e-05}}%CAMK2N1
+    \put(1.3, 4.25){\fontfamily{qcr}\selectfont
+  \tiny *\protect\textit{p} = \num{1.97e-4}}%IL19 6.54e-06 -> CALML5 0.0001970348
+    \put(1.3, 1.15){\fontfamily{qcr}\selectfont
+  \tiny *\protect\textit{p} = \num{4.83e-05}}%FCGBP
+
+%\begin{annotationimage}{width=15cm}{Figure_4_CAMK2N1_IL19_FCGBP.pdf}
+%\includegraphics[width=15cm]{Figure_4_CAMK2N1_IL19.pdf}
+%\draw[annotation left = {Aries at 0.3}]
+
+%\end{annotationimage}
+\end{picture}%
+}
+%\hfill
+{\captionsetup{labelformat=empty}
+\caption{
+- During \hl{cutoff finding} (within 30\%--70\% quantile), hundreds of Kaplan--Meier (KM) plots were generated for each gene.\\
+- The cutoffs (gene expression) were shown in the cumulative FDR-adjusted \hl{\textit{p}~value plots} of  CAMK2N1, CALML5, and FCGBP.\\
+- The KM curves of CAMK2N1, CALML5, and FCGBP with \hl{optimal \textit{p}~values}.\\
+- Next: Cox's modeling\\
+%((b) the cutoffs derived from it's cumulative \protect\textit{p}~value plot).
+%(c) Kaplan--Meier plot of IL19 under optimal \protect\textit{p}~value;
+%((d) the cutoffs derived from it's cumulative \protect\textit{p}~value plot).
+%(e) Kaplan--Meier plot of FCGBP under optimal \protect\textit{p}~value.\\
+%The optimal cutoff value for CAMK2N1 is 
+%,
+%show that over 50\% of those unadjusted \protect\textit{p}~values derived by the sliding-window cutoff-finding procedure are below 0.001.
+\footnotesize (* \textit{p}: \protect\textit{p}~value adjusted by \acrlong{fdr}, \acrshort{fdr}.)
+}}
+%%%\label{fig:figure4}
+\end{figure}
+
+\clearpage
+%%%
 
 % top 3 genes
 \thispagestyle{headings}
@@ -776,7 +825,7 @@ FCGBP &
 ~\\
 The top 3 genes with prognostic impacts on HNSCC. Selection criteria (fit all):\\
 (1) Kaplan--Meier Bonferroni-adjusted~\hl{\textit{p} \textless~0.05} in TCGA; \\
-(2) Cox's univariate and multivariate \hl{HR \textgreater{}= 1.8 or \textless{}= 0.6} in both TCGA's HNSCC and GSE65858 cohorts.\\
+(2) Cox's univariate and multivariate \hl{HR \textgreater{}= 1.8 or \textless{}= 0.6} in both HNSCC (TCGA) and HNSCC (GSE65858) cohorts.\\
 %(3) Cox's univariate and multivariate HR \textgreater{}= 1.8 or \textless{}= 0.6 in GSE65858 cohort.\\
 *~Cox's model: \hl{\textit{p} \textless 0.001}\\
 (HR: hazard ratio; CI95\%: 95\% confidence interval; FDR: \acrlong{fdr})
@@ -842,7 +891,7 @@ The top 3 genes with prognostic impacts on HNSCC. Selection criteria (fit all):\
 \captionsetup{labelformat=empty}
 \caption{
 %The effect size was estimated by Cox's hazard ratio.
-Step 1: biomarker selection by Cox univariate/multivariate HR and \hl{FDR-adjusted} Kaplan--Meier (KM) survival \textit{p}~value.}
+Biomarker selection by Cox univariate/multivariate HR and \hl{FDR-adjusted} Kaplan--Meier (KM) estimate (\textit{p}~value (\textless{} 0.05; 9,416 genes)}
 
 \end{figure}
 
@@ -878,7 +927,7 @@ Step 1: biomarker selection by Cox univariate/multivariate HR and \hl{FDR-adjust
 \captionsetup{labelformat=empty}
 \caption{
 %After stringent restriction by Bonferroni-adjusted \textit{p}~values and Cox's HR, a few top-ranked genes were acquired by
-Step 2: filtering by Cox univariate/multivariate HR and \hl{Bonferroni-corrected} Kaplan--Meier (KM) survival \textit{p}~value.}
+Filtering by Cox univariate/multivariate HR and \hl{Bonferroni-corrected} Kaplan--Meier (KM) survival \textit{p}~value.}
 %(TCGA: \acrlong{tcga}; HR: hazard ratio; FDR: \acrlong{fdr}).}
 
 %\label{fig:figure2}
@@ -890,7 +939,7 @@ Step 2: filtering by Cox univariate/multivariate HR and \hl{Bonferroni-corrected
 \clearpage
 
 \thispagestyle{headings}
-\markright{Results\hfill 20 preliminary biomarkers  \hfill}
+\markright{Results\hfill 39 preliminary biomarkers  \hfill}
 
 \begin{figure}[ht]
 
@@ -898,9 +947,10 @@ Step 2: filtering by Cox univariate/multivariate HR and \hl{Bonferroni-corrected
     %\centering
 {    \includegraphics[width=9cm]{Rplot_TCGA_HNSCC_CoxHR_CAMK2N1_top3FDRKM.pdf}}
 {\captionsetup{labelformat=empty}    
-\caption{A volcano plot of 20 candidate genes in TCGA HNSCC.\\
-    \textcolor{red}{Red spots}: $HR$ > 1.0;\\
-    \textcolor{green}{Green spots}: $HR$ < 1.0.\\
+\caption{A volcano plot of preliminary candidate genes in TCGA HNSCC.\\
+    \textcolor{red}{Red spots}: HR > 1.0;\\
+    \textcolor{green}{Green spots}: HR < 1.0;\\
+    \textcolor{red}{Red dash line}: FDR \textit{p} = 0.05.\\
 %X axis: unadjusted \protect\textit{p}~value of Kaplan--Meier survival (-log10 transformed).
 %Y axis: multivariate hazard ratio from Cox proportional regression model.
 %Dotted line: significant Bonferroni corrected \protect\textit{p}~value. 
@@ -908,7 +958,7 @@ Step 2: filtering by Cox univariate/multivariate HR and \hl{Bonferroni-corrected
 %    This cohort was applied for exploration of the candidate biomarkers.
 %    A total of 9416 genes had %\acrshort{fdr}-
 %    unadjusted \protect\textit{p}~values of less than 0.05.
-    \textcolor{red}{CAMK2N1}, \textcolor{red}{CALML5}, \textcolor{red}{FCGBP}, and 17 other genes (marked in \textcolor{black}{black square}) had \hl{hazard ratios (HRs) >$1.8$ or <$0.6$}.
+    \textcolor{red}{CAMK2N1}, \textcolor{red}{CALML5}, \textcolor{red}{FCGBP}, and  other genes (marked in \textcolor{black}{black square}) had \hl{hazard ratios (HRs) >$1.8$ or <$0.6$} and \hl{Bonferroni-adjusted KM \textit{p} values < $0.05$}.
 %    The 22 genes, listed on the side, had hazard ratios between 0.6 and 1.5.
 %    (X-axis: Kaplan--Meier survival estimates, with \acrshort{fdr}-adjusted \protect\textit{p}~values (log10 transformed);
 %y-axis: HR of Cox proportional hazard regression model.)
@@ -931,55 +981,13 @@ Step 2: filtering by Cox univariate/multivariate HR and \hl{Bonferroni-corrected
     % GSE117973 using the same platform GPL10558
 The candidate genes---\textcolor{red}{CAMK2N1}, \textcolor{red}{CALML5}, and \textcolor{red}{FCGBP}---was confirmed.\\
 %    In total, 534 genes had \acrshort{fdr}-adjusted \protect\textit{p}~values less than 0.05
-    (\textcolor{red}{Red spots}: hazard ratios are greater than 1.0;\\
-    \textcolor{green}{Green spots}: hazard ratios are under 1.0.)
+    (\textcolor{red}{Red dash line}: FDR-corrected KM \textit{p} value (0.05) for 20,500 multiple comparison)
 %    The 22 genes, listed on the side, had hazard ratios >$1.8$ or <$0.6$.
 %    (X-axis: Kaplan--Meier survival estimates, with \acrshort{fdr}-adjusted \protect\textit{p}~values, log10 transformed; y-axis: the hazard ratio (HR) under the Cox proportional hazard regression model).
     }}
 %%%\label{fig:hazards534}
 \end{figure}
 
-
-\clearpage
-
-
-\begin{figure}[ht]
-
-\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=.45\linewidth,capbesidesep=quad}}]{figure}[\FBwidth]
-% TCGA FDR Pvalue of CAMK2N1 (1.628308e-05), IL19 ( 6.543871e-06), FCGBP (4.827833e-05), CALML5 (0.0001970348)
-{\setlength{\unitlength}{.78cm}
-\begin{picture}(9, 10) %(1,0.55038404)%
-\centering
-  \put(0,0){\includegraphics[height=7.5cm]{Figure_4_CAMK2N1_CALML5_FCGBP.pdf}}%
-  \put(1.3, 7.25){\fontfamily{qcr}\selectfont
-  \tiny *\protect\textit{p} = \num{1.63e-05}}%CAMK2N1
-    \put(1.3, 4.25){\fontfamily{qcr}\selectfont
-  \tiny *\protect\textit{p} = \num{1.97e-4}}%IL19 6.54e-06 -> CALML5 0.0001970348
-    \put(1.3, 1.15){\fontfamily{qcr}\selectfont
-  \tiny *\protect\textit{p} = \num{4.83e-05}}%FCGBP
-
-%\begin{annotationimage}{width=15cm}{Figure_4_CAMK2N1_IL19_FCGBP.pdf}
-%\includegraphics[width=15cm]{Figure_4_CAMK2N1_IL19.pdf}
-%\draw[annotation left = {Aries at 0.3}]
-
-%\end{annotationimage}
-\end{picture}%
-}
-%\hfill
-{\captionsetup{labelformat=empty}
-\caption{Kaplan--Meier (KM) survival analyses, during \hl{cutoff finding (within 30\%--70\% quantile)}.
-The KM curves of (\textbf{a}) CAMK2N1, (\textbf{c}) CALML5, and (\textbf{e}) FCGBP with optimal \protect\textit{p}~values. 
-%((b) the cutoffs derived from it's cumulative \protect\textit{p}~value plot).
-%(c) Kaplan--Meier plot of IL19 under optimal \protect\textit{p}~value;
-%((d) the cutoffs derived from it's cumulative \protect\textit{p}~value plot).
-%(e) Kaplan--Meier plot of FCGBP under optimal \protect\textit{p}~value.\\
-%The optimal cutoff value for CAMK2N1 is 
-The cutoffs in the cumulative FDR-adjusted \protect\textit{p}~value plots of (\textbf{b}) CAMK2N1, (\textbf{d}) CALML5, and (\textbf{f}) FCGBP.%,
-%show that over 50\% of those unadjusted \protect\textit{p}~values derived by the sliding-window cutoff-finding procedure are below 0.001.
-(* \protect\textit{p}: \protect\textit{p}~value adjusted by \acrlong{fdr}, \acrshort{fdr}.)
-}}
-%%%\label{fig:figure4}
-\end{figure}
 
 
 %% table 1
@@ -1099,7 +1107,7 @@ CI95\%: 95\% confidence interval;
     
     \begin{subfigure}[c]{0.5\textwidth}
     \includegraphics[width=7.5cm]{RplotH2H_TCGA_GSE65858_CoxHR.pdf}
-    \caption{Cox's hazard ratios from TCGA HNSCC and GSE65858 (Pearson's correlation coefficient~\cite{Schober2018}, r = 0.27).}
+    \caption{Cox's hazard ratios from HNSCC (TCGA) and HNSCC (GSE65858) (Pearson's correlation coefficient~\cite{Schober2018}, r = 0.27).}
     \end{subfigure}
 %\hfill
     \begin{subfigure}[t]{0.15\textwidth}
